[impr] some code cleaning